# MRO

./: .gitignore  README.md  pyproject.toml
lab1/: canny_edge_detection.ipynb
lab2/: cifar_cnn.ipynb  snake_net.py
lab3/: carrot_cakes.ipynb
lab4/: yolo.ipynb
lab5/: ddpm.ipynb
lab6/: attention.ipynb
