[tool.poetry]
name = "mro"
version = "0.1.0"
description = ""
authors = ["Michał Nożkiewicz <michno513@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
jupyter = "^1.1.1"
torchvision = "^0.19.1"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
torchviz = "^0.0.2"
optuna = "^4.0.0"
torchview = "^0.2.6"
pygifsicle = "^1.1.0"
ultralytics = "^8.3.27"
boto3 = "^1.35.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
